# sprint-narrator

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sprint_narrator/: aggregator.py  cli.py  config.py  exceptions.py  narrator.py  render.py  storage.py
src/sprint_narrator/sources/: __init__.py  github.py  jira.py  linear.py
src/sprint_narrator/templates/: summary.html.j2  summary.md.j2
tests/: test_aggregator.py  test_cli.py  test_config.py  test_github.py  test_jira.py  test_linear.py  test_narrator.py  test_render.py  test_storage.py
