[project]
name = "sprint-narrator"
version = "0.1.0"
description = "AI-powered sprint summary generator that pulls from Linear, Jira, and GitHub to create narrative reports"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.15",
    "httpx>=0.28",
    "ollama>=0.4",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
sprint-narrator = "sprint_narrator.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
